# ubuntu-desktop

./: .eslintrc.json  .gitignore  README.md  angular.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
backend/: .gitignore  drizzle.config.ts  env.example  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo  wrangler.jsonc
backend/migrations/: 0001_0001_initial.sql  0002_0002_user_sessions.sql
backend/src/: app.ts  entry.py  server.ts
backend/src/controllers/: auth.controller.ts  todo.controller.ts
backend/src/db/: db.ts
backend/src/docs/: swagger.ts
backend/src/docs/routes/: auth.yml  preferences.yml
backend/src/lib/: cloudinary.ts
backend/src/models/: ErrorResponse.interface.ts
backend/src/modules/auth/application/: login.py  logout.py  recover_password.py  refresh_session.py  register.py
backend/src/modules/auth/domain/: model.py
backend/src/modules/settings/domain/: settings.py
backend/src/modules/task/domain/: task.py
backend/src/modules/user/: __init__.py
backend/src/modules/user/application/: __init__.py  schemas.py
backend/src/routes/: auth.routes.ts  entry.routes.ts  todo.routes.ts
backend/src/schemas/: auth.schema.ts  todo.schema.ts
backend/src/shared/: __init__.py
backend/src/shared/domain/: base_repository.py  exceptions.py  password_hasher_out.py
backend/src/shared/infrastructure/: __init__.py  cloudflare_types.py  di.py  error_handlers.py  native_password_hasher.py  schemas.py  utils.py
backend/src/utils/: Errors.enum.ts  errorHandler.ts
(+797 files in other folders)
