[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["email-validator>=2.3.0", "fastapi>=0.136.1"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = ["workers-py", "workers-runtime-sdk", "pyrefly>=0.63.0"]
